0.4.1:
Tim Janson - Tue Sep  5 18:05:18 PDT 2000
 * Fixed potential divide-by-zero with some illegal audio streams
Sam Lantinga - Tue Sep  5 14:09:14 PDT 2000
 * Changed gtv to perform bilinear filtering instead of deblocking
Sam Lantinga - Tue Sep  5 13:39:36 PDT 2000
 * Changed the filters to C implementations instead of C++ implementations
Vivien Chappelier - Tue Sep  5 12:09:10 PDT 2000
 * Fixed crash with MPEG files containing audio frames in multiple layers
 * Fixed crash when looping system streams
 * Added video filter code
 * Implemented a copy filter (default filter)
 * Implemented a bilinear filter
 * Implemented a subtle de-blocking filter
 * Improved the motion detection code, crashes/hangs on fewer MPEG movies
Ray Kelm - Fri, 04 Aug 2000 20:58:00 -0400
 * Added support for cross-compiling Windows DLL from Linux
Joe Valenzuela - Wed Aug  9 12:05:13 PDT 2000
 * Added SMPEG_new_data() to play MPEG data already in memory
Vivien Chappelier - Sun Jul 23 13:48:33 2000
 * Added the total time of an MPEG to the information structure
Vivien Chappelier - Sun Jul 23 13:48:33 2000
 * Changed stream decoding to use more efficient condition variables
Kevin Squire - Thu Aug  3 18:23:01 PDT 2000
 * Fixed a bug in the audio layer 2 decoding
Sam Lantinga - Thu Aug  3 17:56:09 PDT 2000
 * Fixed FD_ZERO compile problem on some systems
Sam Lantinga - Thu Aug  3 17:51:35 PDT 2000
 * Modified plaympeg to play videos even if audio device isn't available
Jens Vaasjo, Sam Lantinga, Nicholas Vining - Thu Aug  3 16:49:40 PDT 2000
 * Modified glmovie to do fullscreen hardware accelerated display
David Hedbor - Wed Aug  2 14:08:20 PDT 2000
 * Minor smpeg-config fixes for Solaris
Sam Lantinga - Wed Jun 21 14:58:24 PDT 2000
 * The MMX idct code resulted in much less quality, so disabled by default
Sam Lantinga - Thu Jun 15 00:07:33 PDT 2000
 * Added support for multiple tracks on a VCD disk
Vivien Chappelier - Wed Jun 14 12:43:54 PDT 2000
 * Added VCD and URL support to plaympeg
